# credential-badges

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  MOC.md  Makefile  README.md  ROADMAP.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-issuer.yml  deploy-render.yml  deploy.yml
.well-known/: did.json
context/: v0.jsonld
docs/: cache.md  how-credential-badges-work.md  verifier-guidance.md
docs/brainstorms/: 2026-06-27-issuer-badge-customization-requirements.md
docs/plans/: 2026-05-16-001-feat-andamio-ob3-issuer-deployment-plan.md  2026-06-25-001-fix-orphan-shield-badge-cleanup-plan.md  2026-06-25-002-feat-dynamic-on-demand-badge-generation-plan.md  2026-06-25-002-on-demand-generation-RESUME.md  (+3 more)
generator/: README.md  api_client.py  build.py  colors.py  decode.py  embed_fonts.py  fetch.py  fonts.css  gen.py  render.py
issuer/: profile.jsonld
issuer-service/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
nginx/: default.conf  default.conf.template
public/: README.md  index.html
scripts/: cache-admin.py
service/: Dockerfile  app.py  cache.py  requirements.txt
spike/verifier-spike/verifiers/spruce/: Cargo.toml  run.sh
spike/verifier-spike/verifiers/spruce/src/: main.rs
status/: key-epoch-2026-07.json
tools/: README.md  bake-signed-vc.test.ts  bake-signed-vc.ts  context-freeze.test.ts  did-pin.test.ts  flip-status-bit.test.ts  flip-status-bit.ts  gen-did-json.test.ts  gen-did-json.ts  issuer-profile.test.ts  package.json  tsconfig.json
(+112 files in other folders)
